[package]
name = "fftools"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
openff-toolkit = { path = "../../omsf/rust/coprelos/openff-toolkit" }
rdkit-rs = { path = "../rdkit-rs" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[workspace]
resolver = "2"
members = [
    "ffblame", "ffchar", "ffdiff", "ffmoved", "ffsubset",
]
