[package]
name = "ffcover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fftools = { path = "../" }
openff-toolkit = { path = "../../../omsf/rust/coprelos/openff-toolkit" }
openff-qcsubmit = { path = "../../../omsf/rust/coprelos/openff-qcsubmit" }
rdkit-rs = { git = "https://github.com/ntBre/rdkit-rs" }